# paper_bionut

./: 00-fix_files.ipynb  01-experiments.ipynb  02-summary_stats.ipynb  03-map_generation.ipynb  pyproject.toml
input/: AdHoc - Página1.csv  Supplementary Material 3 - BIONUT - Neglected Food Species - Página1.csv
input copy/: Supplementary Material 3 - BIONUT - Neglected Food Species - Página1.csv
input copy/ALIMENTOS/: BIONUT - AQUINO, Jailane.xlsx  BIONUT - BATISTA, Angela.xlsx  BIONUT - BEZERRA, Ingrid.xlsx  BIONUT - CARIOCA, Antonio.xlsx  BIONUT - GIUTINI, Eliana.xlsx  BIONUT - NORDE, Marina.xlsx  BIONUT - OLIVEIRA, Elieidy.xlsx  BIONUT - STELUTI, Josiane.xlsx  BIONUT - TEIXEIRA, Juliana.xlsx
input copy/BIOLOGOS/: BIONUT - ALVES, Rômulo.xlsx  BIONUT - BIZRI, Hani.xlsx  BIONUT - MORCATTY, Thais.xlsx  BIONUT - OLIVEIRA, Marcela.xlsx
input/ALIMENTOS/: BIONUT - AQUINO, Jailane.xlsx  BIONUT - BATISTA, Angela.xlsx  BIONUT - BEZERRA, Ingrid.xlsx  BIONUT - CARIOCA, Antonio.xlsx  BIONUT - CAZARIN, Cinthia.xlsx  BIONUT - GIUTINI, Eliana.xlsx  BIONUT - LIMA, Severina.xlsx  BIONUT - MORAIS, Celia.xlsx  BIONUT - NORDE, Marina.xlsx  BIONUT - OLIVEIRA, Elieidy.xlsx  BIONUT - SANTOS JR, Anibal.xlsx  BIONUT - STELUTI, Josiane.xlsx  BIONUT - TEIXEIRA, Juliana.xlsx
input/BIOLOGOS/: BIONUT - ALVES, Rômulo.xlsx  BIONUT - BIZRI, Hani.xlsx  BIONUT - MORCATTY, Thais.xlsx  BIONUT - OLIVEIRA, Marcela.xlsx  BIONUT - ZENOBIA, Leticia.xlsx
maps_data/BR_Regioes_2022/: BR_Regioes_2022.dbf  BR_Regioes_2022.shx
output/: results.xlsx
