[tool.poetry]
name = "paper-bionut"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
llvmlite = "0.43"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
openpyxl = "^3.1.5"
numba = "^0.60"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
